# python-web-server-from-scratch

./: README.md  pyproject.toml
part1/final_tcp_server/: client.py  interface.py  server.py  socket_io.py
part1/process_sleeping/: server.py
part1/simple_tcp_server/: server.py
part1/socket_as_fd/: socket_as_fd.py
part1/tcp_server_with_graceful_shutdown/: client.py  server.py  signals.py
part1/tcp_server_with_idle_timeout/: interface.py  server.py
part1/tcp_socket/: client.py  server.py
part1/unix_socket/: client.py  server.py
part1/wsgi/: app.py  handler.py  server.py
